--- a/6.Sellout Creazione Settimane Mancanti Query.md
+++ b/6.Sellout Creazione Settimane Mancanti Query.md
@@ -28,23 +28,23 @@ AND D.SELL_OUT  ='GGG'
 ### Query2 Estrazione Partite Iva per Gruppo
 ```sql
 SELECT A.TAX_NUM2_PI
-, MIN(E.PDV_COD_ELUX)
-FROM  TBNOCLAC  A
+      , MIN(E.PDV_COD_ELUX)
+FROM  TBNOCLAC A
 INNER JOIN ORPROD.TBORTAB B
 ON B.SOC_COD = :SOC_COD
-AND B.TABLE_NAME  = 'OCPCG'
-AND SUBSTR(B.ELEM,1,11)  = A.TAX_NUM2_PI
+AND B.TABLE_NAME = 'OCPCG'
+AND SUBSTR(B.ELEM,1,11) = A.TAX_NUM2_PI
 INNER JOIN NOPROD.TBNOWACL C
-ON A.SOC_COD  = C.SOC_COD
-AND A.CUST_COD  = C.CUST_COD
+ON B.SOC_COD = C.SOC_COD
+AND A.CUST_COD = C.CUST_COD
 INNER JOIN ORPROD.TBORWCPA D
 ON C.SOC_COD = D.SOC_COD
-AND C.CUSTID  = D.CUSTID
+AND C.CUSTID = D.CUSTID
 INNER JOIN NOPROD.TBORSLOA E
-ON A.TAX_NUM2_PI  = E.PART_IVA
-WHERE A.SOC_COD  = :SOC-COD
-AND D.SELL_OUT  ='GGG'
-AND SUBSTR(B.KEY_ELEM,1,3)= :GRUPPO
+ON A.TAX_NUM2_PI = E.PART_IVA
+WHERE A.CMPNY_COD = 'IT16'
+AND       D.SELL_OUT = 'GGG'
+AND       SUBSTR(B.KEY_ELEM,1,3)= :GRUPPO
 GROUP BY A.TAX_NUM2_PI
 ```
 ### Query3 Estrazione Week per Singolo Socio
